objects/L2O_Broker_Prices__c.object
<CustomObject>
    <description>Pricing Table for USGH Products when the pricebook is broker.</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_At_Risk_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>At Risk Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_BusinessRegion__c</fullName>
        <label>Business Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Consult_Type__c</fullName>
        <label>Consult Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Tier 1 - Standard</fullName>
                </value>
                <value>
                    <fullName>Tier 1 - Included</fullName>
                </value>
                <value>
                    <fullName>MFN - Standard</fullName>
                </value>
                <value>
                    <fullName>MFN - Included</fullName>
                </value>
                <value>
                    <fullName>Mercer WTW - Standard</fullName>
                </value>
                <value>
                    <fullName>Mercer/WTW - Included</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_ContractPath__c</fullName>
        <label>Contract Path</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PPPM</fullName>
                </value>
                <value>
                    <fullName>PEPM</fullName>
                </value>
                <value>
                    <fullName>PMPM</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_GrandParent_Product_Code__c</fullName>
        <formula>IF( ISBLANK(L2O_GrandParent_Product__r.ProductCode) , &apos;NULL&apos;, L2O_GrandParent_Product__r.ProductCode)</formula>
        <label>GrandParent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_GrandParent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrandParent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Broker Prices (GrandParent Product)</relationshipLabel>
        <relationshipName>Broker_Prices2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Initial_Utilization_Cap__c</fullName>
        <label>Initial Utilization Cap</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2O_Number_of_Employees_End__c</fullName>
        <label>Number of Employees End</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Number_of_Employees_Start__c</fullName>
        <label>Number of Employees Start</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Package_Product_Code__c</fullName>
        <label>Package Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Product_Code__c</fullName>
        <formula>IF(ISBLANK(L2O_Parent_Product__r.ProductCode),&apos;NULL&apos; , L2O_Parent_Product__r.ProductCode)</formula>
        <label>Parent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Broker Prices (Parent Product)</relationshipLabel>
        <relationshipName>Broker_Prices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_ProductCode__c</fullName>
        <formula>L2O_Product__r.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Broker Prices (Product)</relationshipLabel>
        <relationshipName>Broker_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_StateProvince__c</fullName>
        <label>State/Province</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Up_Front_Fee__c</fullName>
        <label>Up Front Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Utilization_Assumption__c</fullName>
        <label>Utilization Assumption</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vendor_Partner_Text__c</fullName>
        <formula>IF(ISBLANK(TEXT(Vendor_Partner__c)),&apos;None&apos;, TEXT(Vendor_Partner__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Partner Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Partner__c</fullName>
        <label>Vendor Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Vendor_Partner</valueSetName>
        </valueSet>
    </fields>
    <label>Broker Price</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>L2O_BusinessRegion__c</columns>
        <columns>L2O_ContractPath__c</columns>
        <columns>L2O_Product__c</columns>
        <columns>L2O_Parent_Product_Code__c</columns>
        <columns>L2O_GrandParent_Product_Code__c</columns>
        <columns>L2O_Package_Product_Code__c</columns>
        <columns>L2O_Consult_Type__c</columns>
        <columns>L2O_Fee_Type__c</columns>
        <columns>L2O_Price__c</columns>
        <columns>L2O_Number_of_Employees_Start__c</columns>
        <columns>L2O_Number_of_Employees_End__c</columns>
        <columns>L2O_Effective_Date__c</columns>
        <columns>L2O_Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>L2O_ProductCode__c</field>
            <operation>equals</operation>
            <value>EMO2</value>
        </filters>
        <filters>
            <field>L2O_Expiration_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>L2O_Consult_Type__c</field>
            <operation>equals</operation>
            <value>Included</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BP-{0000}</displayFormat>
        <label>Broker Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Prices</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>